- Fixed some layout problems - Added feature that submits form on "Enter" keypress - Fixed bug, where avatars could go out of round bounds

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -316,3 +316,11 @@ h1 {
 .ct-button__edit {
     height: 100%;
 }
+
+#message_input {
+    width: 100%;
+}
+
+.ct-message__text {
+    word-break: break-all;
+}
